# dossierfacile-backend

./: .buildpacks  .gitignore  .gitlab-ci.yml  AGENTS.md  Aptfile  LICENSE  Procfile  README.md  docker-compose.dev.yml  docker-compose.overwrite.yml  lombok.config  pom.xml  system.properties
.agents/: mcp_config.json
.nginx/: nginx.conf
.profile.d/: imagemagick-policy.sh
.rabbitmq/: rabbitmq.conf
bo/: Dockerfile  Procfile  pom.xml
docs/: export-db.sh
dossier-facile-file-analysis/: Dockerfile  pom.xml
dossier-facile-logging-library/: pom.xml
dossierfacile-api-owner/: Dockerfile  Procfile  README.md  pom.xml
dossierfacile-api-tenant/: Dockerfile  Procfile  README.md  pom.xml  settings.xml
dossierfacile-api-watermark/: Dockerfile  README.md  pom.xml
dossierfacile-bo/: Dockerfile  README.md  pom.xml
dossierfacile-common-library/: .gitignore  README.md  pom.xml
dossierfacile-common-test-library/: pom.xml
dossierfacile-document-analysis/: pom.xml
dossierfacile-front-owner/: Dockerfile  pom.xml
dossierfacile-garbage-collector/: Dockerfile  Procfile  README.md  pom.xml  system.properties
dossierfacile-migrate-user/: pom.xml
dossierfacile-pdf-api/: pom.xml
dossierfacile-pdf-generator/: .gitignore  Dockerfile  Procfile  README.md  pom.xml
dossierfacile-process-file/: Dockerfile  README.md  pom.xml
dossierfacile-task-scheduler/: Dockerfile  README.md  lombok.config  pom.xml
elastalert/: README.md  deploy-rules.sh  example.env
france-identite-numerique-api/: Procfile  README
zxing-cpp/data/: CMakeLists.txt  zxing_wrapper.cpp
(+3147 files in other folders)
